--- a/frontend/stockload/package.json
+++ b/frontend/stockload/package.json
@@ -15,6 +15,7 @@
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
+    "react-barcode": "^1.6.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.1",
     "react-select": "^5.10.2",
